--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -3740,7 +3740,7 @@
       </notes>
       <segment>
         <source>Du drückst den {item} eng an deine Brust... &lt;t-stat-down-terror&gt;Tränen laufen über deine Wange, als du an die Hölle denkst, in der du lebst. Nach ein paar Minuten fühlst du dich besser!&lt;/t-stat-down-terror&gt;&lt;nt-stat-down-terror&gt;Aber nichts geschieht!&lt;/nt-stat-down-terror&gt;</source>
-        <target><![CDATA[Vous serez {item} très fort contre vous... <t-stat-down-terror>Rapidement, les larmes vous viennent aux yeux. Les nerfs... Vous éclatez en sanglot tandis que vous prenez conscience de l'enfer dans lequel vous vivez...<hr />Après quelques minutes vous vous sentez un peu mieux... </t-stat-down-terror><nt-stat-down-terror><strong>Mais rien ne vient.</strong> Vous vous sentez même encore plus triste qu'avant. A quoi bon continuer à "vivre" après tout?</nt-stat-down-terror>]]></target>
+        <target><![CDATA[Vous serrez {item} très fort contre vous... <t-stat-down-terror>Rapidement, les larmes vous viennent aux yeux. Les nerfs... Vous éclatez en sanglot tandis que vous prenez conscience de l'enfer dans lequel vous vivez...<hr />Après quelques minutes vous vous sentez un peu mieux... </t-stat-down-terror><nt-stat-down-terror><strong>Mais rien ne vient.</strong> Vous vous sentez même encore plus triste qu'avant. A quoi bon continuer à "vivre" après tout?</nt-stat-down-terror>]]></target>
       </segment>
     </unit>
     <unit id="4TKj72Z">
@@ -3750,7 +3750,7 @@
       </notes>
       <segment>
         <source>Du drückst den {item} eng an deine Brust... &lt;t-stat-up-terror&gt;Panik steigt in dir auf!&lt;/t-stat-up-terror&gt;&lt;nt-stat-up-terror&gt;Aber nichts geschieht!&lt;/nt-stat-up-terror&gt;</source>
-        <target><![CDATA[Vous appuyez {item} près de votre poitrine... <t-stat-up-terror>La panique surgit en vous !</t-stat-up-terror><nt-stat-up-terror>Mais rien ne se passe!</nt-stat-up-terror>]]></target>
+        <target><![CDATA[Vous serrez {item} très fort contre vous... <t-stat-up-terror>La panique surgit en vous !<hr />Vous êtes devenu <strong>terrorisé(e)</strong> !</t-stat-up-terror><nt-stat-up-terror>Mais rien ne se passe!</nt-stat-up-terror>]]></target>
       </segment>
     </unit>
     <unit id="kp6Ik3m" name="Rauchen">
