--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -16547,5 +16547,11 @@
         <target>Du hast keine Seelenpunkte gewonnen.</target>
       </segment>
     </unit>
+    <unit id="DAZTSgM" name="Ein anderer Bürger hat sich in der Zwischenzeit diesen Gegenstand geschnappt.">
+      <segment>
+        <source>Ein anderer Bürger hat sich in der Zwischenzeit diesen Gegenstand geschnappt.</source>
+        <target>Ein anderer Bürger hat sich in der Zwischenzeit diesen Gegenstand geschnappt.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
