--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -26109,5 +26109,15 @@ cette violente opération...]]></target>
         <target>Du hast keine Seelenpunkte gewonnen.</target>
       </segment>
     </unit>
+    <unit id="DAZTSgM" name="Ein anderer Bürger hat sich in der Zwischenzeit diesen Gegenstand geschnappt.">
+      <notes>
+        <note category="german">Ein anderer Bürger hat sich in der Zwischenzeit diesen Gegenstand geschnappt.</note>
+        <note category="from">php:///src/Controller/Town/TownController.php</note>
+      </notes>
+      <segment>
+        <source>Ein anderer Bürger hat sich in der Zwischenzeit diesen Gegenstand geschnappt.</source>
+        <target>Cet objet a entre temps été récupéré par un autre joueur.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
