--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -4617,5 +4617,25 @@
         <target>Last words:</target>
       </segment>
     </unit>
+    <unit id="yEnN9xu" name="Stadtnamen regenerieren">
+      <notes>
+        <note category="german">Stadtnamen regenerieren</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Stadtnamen regenerieren</source>
+        <target>Regenerate town name</target>
+      </segment>
+    </unit>
+    <unit id="cUEl3DK" name="Sprache wechseln">
+      <notes>
+        <note category="german">Sprache wechseln</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Sprache wechseln</source>
+        <target>Change language</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
