--- a/translations/ghost+intl-icu.en.xlf
+++ b/translations/ghost+intl-icu.en.xlf
@@ -1728,5 +1728,25 @@
         <target>When you enter a town, the following members of your {coalition} will follow you:</target>
       </segment>
     </unit>
+    <unit id="pGytwu3">
+      <notes>
+        <note category="german">Die Sprache dieser Stadt stimmt nicht mit deiner Spracheinstellung überein. Wenn du dieser Stadt beitrittst, musst du im Stadtforum die Sprache der Stadt verwenden.</note>
+        <note category="from">twig:///templates/ajax/ghost/intro.html.twig</note>
+      </notes>
+      <segment>
+        <source>Die Sprache dieser Stadt stimmt nicht mit deiner Spracheinstellung überein. Wenn du dieser Stadt beitrittst, musst du im Stadtforum die Sprache der Stadt verwenden.</source>
+        <target>The town's language does not match your soul's language setting. By joining this town, you agree to only use the town language when communicating with other players.</target>
+      </segment>
+    </unit>
+    <unit id="xdlAaLd">
+      <notes>
+        <note category="german">Die Verwendung einer anderen Sprache im Stadtforum kann zu Sanktionen seitens der Moderation führen!</note>
+        <note category="from">twig:///templates/ajax/ghost/intro.html.twig</note>
+      </notes>
+      <segment>
+        <source>Die Verwendung einer anderen Sprache im Stadtforum kann zu Sanktionen seitens der Moderation führen!</source>
+        <target>Using other languages may result in sanctions from the moderation!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
