--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -16553,5 +16553,11 @@
         <target>Ein anderer Bürger hat sich in der Zwischenzeit diesen Gegenstand geschnappt.</target>
       </segment>
     </unit>
+    <unit id="hu7NaWX">
+      <segment>
+        <source>Ein Moderator hat den Namen einer Stadt geändert, in der du mitgespielt hast. Alter Name: "{townOld}". Neuer Name: "{townNew}"</source>
+        <target>Ein Moderator hat den Namen einer Stadt geändert, in der du mitgespielt hast. Alter Name: "{townOld}". Neuer Name: "{townNew}"</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
