Added FR Translation for playing in other language messages

--- a/translations/ghost+intl-icu.fr.xlf
+++ b/translations/ghost+intl-icu.fr.xlf
@@ -1727,7 +1727,7 @@
       </notes>
       <segment>
         <source>Die Sprache dieser Stadt stimmt nicht mit deiner Spracheinstellung überein. Wenn du dieser Stadt beitrittst, musst du im Stadtforum die Sprache der Stadt verwenden.</source>
-        <target>Die Sprache dieser Stadt stimmt nicht mit deiner Spracheinstellung überein. Wenn du dieser Stadt beitrittst, musst du im Stadtforum die Sprache der Stadt verwenden.</target>
+        <target>La langue de cette ville ne correspond pas à votre langue paramétrée. Lorsque vous rejoindrez cette ville, vous devrez utiliser la langue de la ville dans le forum de la ville.</target>
       </segment>
     </unit>
     <unit id="xdlAaLd">
@@ -1738,7 +1738,7 @@
       </notes>
       <segment>
         <source>Die Verwendung einer anderen Sprache im Stadtforum kann zu Sanktionen seitens der Moderation führen!</source>
-        <target>Die Verwendung einer anderen Sprache im Stadtforum kann zu Sanktionen seitens der Moderation führen!</target>
+        <target>L'utilisation d'une autre langue dans le forum de la ville peut entraîner des sanctions de la part d'un modérateur !</target>
       </segment>
     </unit>
   </file>
