--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -388,7 +388,7 @@
     <unit id="VasxdH5" name="Routen">
       <segment>
         <source>Routen</source>
-        <target>Routen</target>
+        <target>Expeditionen</target>
       </segment>
     </unit>
     <unit id="wkJT.qQ" name="Stadttor">
