--- a/translations/admin+intl-icu.de.xlf
+++ b/translations/admin+intl-icu.de.xlf
@@ -2905,5 +2905,17 @@
         <target>Sprache wechseln</target>
       </segment>
     </unit>
+    <unit id="jupu8vs" name="Fremder">
+      <segment>
+        <source>Fremder</source>
+        <target>Fremder</target>
+      </segment>
+    </unit>
+    <unit id="bHjGkUb" name="Mysteriösen Fremden aktivieren">
+      <segment>
+        <source>Mysteriösen Fremden aktivieren</source>
+        <target>Mysteriösen Fremden aktivieren</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
