--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4610,7 +4610,7 @@
       </notes>
       <segment>
         <source>Fremder</source>
-        <target>Fremder</target>
+        <target>Étranger</target>
       </segment>
     </unit>
     <unit id="bHjGkUb" name="Mysteriösen Fremden aktivieren">
@@ -4621,7 +4621,7 @@
       </notes>
       <segment>
         <source>Mysteriösen Fremden aktivieren</source>
-        <target>Mysteriösen Fremden aktivieren</target>
+        <target>Activer le mystérieux étranger</target>
       </segment>
     </unit>
   </file>
