--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -26137,7 +26137,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Mysteriöser Fremder</source>
-        <target>Mysteriöser Fremder</target>
+        <target>Mystérieux étranger</target>
       </segment>
     </unit>
   </file>
